--- a/1-birthday-reminder/src/index.css
+++ b/1-birthday-reminder/src/index.css
@@ -41,7 +41,7 @@ Variables
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
   --max-width: 1170px;
   --fixed-width: 450px;
-  --clr-pink: #f28ab2;
+  --clr-green: #1ee854;
 }
 /*
 =============== 
@@ -59,7 +59,7 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-pink);
+  background: var(--clr-green);
   color: var(--clr-grey-9);
   line-height: 1.5;
   font-size: 0.875rem;
@@ -179,13 +179,19 @@ main {
   display: block;
   width: 100%;
   border-color: transparent;
-  background: var(--clr-pink);
+  background: var(--clr-green);
   margin: 2rem auto 0 auto;
   text-transform: capitalize;
   font-size: 1.2rem;
   padding: 0.5rem 0;
   letter-spacing: var(--spacing);
   border-radius: var(--radius);
-  outline: 1px solid rgba(242, 138, 178, 0.8);
+  outline: 1px solid rgba(0, 130, 50, 0.8);
   cursor: pointer;
+  transition: 0.3s;
+}
+
+.container button:hover{
+  transform: scale(1.1);
+  opacity: 0.8;
 }
