--- a/2-tours/src/index.css
+++ b/2-tours/src/index.css
@@ -205,6 +205,7 @@ main {
   font-size: 1rem;
   cursor: pointer;
   padding-left: 0.25rem;
+  font-weight: 700;
 }
 .tour-price {
   color: var(--clr-primary-5);
